# tree-sitter-sql-bigquery

./: .gitattributes  .gitignore  .npmignore  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  deno.jsonc  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
.github/: dependabot.yml
.github/script/: update_demo  version
.github/workflows/: cd.yml  ci.yml  gh-pages.yml  github_pages.yml  node.js.yml  prepare-release.yml  publish-pypi.yml  publish.yml  release.yml  tagpr.yml
bindings/c/: tree-sitter-sql_bigquery.h  tree-sitter-sql_bigquery.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
corpus/: analytic_function.txt  comment.txt  errors.txt  identifier.txt  operators.txt  select.txt  statement_ddl.txt  statement_dml.txt
docs/: index.html  playground.js  tree-sitter-parser.wasm  tree-sitter-sql.wasm  tree-sitter-sql_bigquery.wasm  tree-sitter.js
docs/demo/: tree-sitter.js
examples/: select.sql
examples/ddl/: procedure.sql
playground/: index.html  start.sh  tree-sitter.js  tree-sitter.wasm
queries/: highlights.scm
script/: update_demo  version
scripts/: update_demo
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
src/script/: update_demo  version
test/corpus/: analytic_function.txt  bigquery_script.txt  bigqueryml.txt  comment.txt  cte.txt  identifier.txt  insert.txt  literals.txt  operators.txt  procedual_language.txt  select.txt  statement_dcl.txt  statement_ddl.txt  (+3 more)
(+8 files in other folders)
