[package]
name = "tree-sitter-sql-bigquery"
description = "BigQuery SQL grammar for the tree-sitter parsing library"
authors = ["TKNGUE <takegue@gmail.com>"]
version = "0.0.1"
keywords = ["incremental", "parsing", "sql", "bigquery", "tree-sitter"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/TKNGUE/tree-sitter-sql-bigquery"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19.3"

[build-dependencies]
cc = "1.0"
